# self-detection

./: README.md  run.sh
src/: CMakeLists.txt  main.cpp
src/clargs/: CLArgsParser.cpp  clargs.h
src/sockets/: Socket.cpp  sockets.h
src/sockets/addrs/: SocketAddr.cpp  SocketAddrIPv4.cpp  SocketAddrIPv6.cpp
src/sockets/receiving_sockets/: ReceivingSocket.cpp  ReceivingSocketIPv4.cpp  ReceivingSocketIPv6.cpp
src/sockets/sending_sockets/: SendingSocket.cpp  SendingSocketIPv4.cpp  SendingSocketIPv6.cpp
src/storage/: ProgramSchema.cpp  Storage.cpp  storage.h
